tried adjusting search to pull more than one new term

--- a/styles/_baseline.scss
+++ b/styles/_baseline.scss
@@ -66,3 +66,12 @@ img {
 a {
   text-decoration: none;
 }
+
+.searchBar {
+  input {
+    display: inline-block;
+  }
+  button {
+    display: inline-block;
+  }
+}
